--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,41 +1,74 @@
-*,
-*::before,
-*::after {
+html {
   box-sizing: border-box;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
 body {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 26px;
   color: black;
-  background-color: rgba(255, 255, 255, 0.507);
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
+  font-size: 20px;
+  line-height: 1.5;
 }
 
 .input{
   padding: 10px;
+  margin-bottom: 10px;
   font-size: 26px;
 }
+
 .countries-list {
-  border: 1px solid #ac3939;
   border-radius: 5px;
+  box-shadow: 0px 4px 4px rgba(136, 117, 117, 0.15);
+  background-color: #e6e3e3;
   width: 500px;
 }
 
 .countries-list__item {
   padding-bottom: 10px;
+  cursor: pointer;
+}
+.countries-list__item:hover{
+  color: #910e14;
 }
 
 .wrapper {
-  width: 1000px;
-  border: 1px solid #ac3939;
+  width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px solid #e6e3e3;
   border-radius: 5px;
+  box-shadow: 0px 4px 4px rgba(136, 117, 117, 0.15);
+  background-color: white
 }
 
 .card {
 display: flex;
-justify-content: center;
+justify-content: space-around;
 flex-wrap: nowrap;
 padding: 20px;
+background-color: #e6e3e3;
 }
 
 .card__name{
@@ -47,6 +80,7 @@ padding: 20px;
 }
 
 .card__text {
+  margin-bottom: 10px;
   font-weight: 600;
 }
 
